--- a/src/htmlStyle.css
+++ b/src/htmlStyle.css
@@ -1,10 +1,13 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 2rem 2rem 0 2rem;
   text-align: center;
 }
-
+body {
+  margin: 8px 8px 0 8px;
+  padding: 0;
+}
 .logo {
   height: 6em;
   padding: 1.5em;
