--- a/src/pages/About/Collapse/collapse.scss
+++ b/src/pages/About/Collapse/collapse.scss
@@ -9,7 +9,8 @@
   border-radius: 10px;
   padding: 15px 25px;
   img {
-    filter: invert(1);
+    filter: invert(1) brightness(2) contrast(2);
+    transition: transform 0.3s ease;
   }
   h2 {
     font-family: "Montserrat", serif;
@@ -18,6 +19,10 @@
     line-height: 34.22px;
     letter-spacing: 0%;
   }
+}
+
+.rotate {
+  transform: rotate(-180deg);
 }
 .elementText {
   width: 80%;
