--- a/src/pages/Home/banner/banner.scss
+++ b/src/pages/Home/banner/banner.scss
@@ -1,29 +1,53 @@
 .banner {
-    position: relative;
+  position: relative;
+  height: 223px;
+  margin: 50px 0;
+  img {
+    border-radius: 20px;
     height: 223px;
-    margin: 50px 0;
-    img {
-      border-radius: 20px;
-      height: 223px;
-      width: 100%;
-      background: #000000;
-      filter: brightness(70%);
-      object-fit: cover;
-      box-shadow: 0px 4px 4px 0px #00000040;
-    }
+    width: 100%;
+    background: #000000;
+    filter: brightness(70%);
+    object-fit: cover;
+    box-shadow: 0px 4px 4px 0px #00000040;
+  }
+  p {
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 68.45px;
+    letter-spacing: 0%;
+    width: 100%;
+    z-index: 3;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin: 0;
+    color: white;
+  }
+}
+
+@media (max-width: 900px) {
+  .banner {
     p {
       font-family: Montserrat;
       font-weight: 700;
-      font-size: 48px;
-      line-height: 68.45px;
+      font-size: 24px;
+      line-height: 24px;
       letter-spacing: 0%;
-      width: 100%;
-      z-index: 3;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      margin: 0;
-      color: white;
     }
   }
+}
+
+@media (max-width: 720px) {
+  .banner {
+    p {
+      font-family: Montserrat;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 24px;
+      letter-spacing: 0%;
+    }
+  }
+}
