--- a/src/pages/Home/gallery/gallery.scss
+++ b/src/pages/Home/gallery/gallery.scss
@@ -1,55 +1,66 @@
 .Card {
-    position: relative;
-    border-radius: 40px;
-  
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 10px;
-      z-index: 1;
-    }
-  
-    &::before {
-      content: "";
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background: linear-gradient(
-        to bottom,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(0, 0, 0, 0.8) 250%
-      );
-      z-index: 2;
-      border-radius: 10px;
-    }
-  
-    h3 {
-      font-family: Montserrat;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: 25.67px;
-      letter-spacing: 0%;
-  
-      position: absolute;
-      text-align: center;
-      width: 100%;
-      // text-shadow: 2px 2px grey;
-      bottom: 5%;
-      left: 50%;
-      transform: translate(-50%, 0%);
-      margin: 0;
-      color: white;
-      z-index: 3;
-    }
+  position: relative;
+  border-radius: 40px;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+    z-index: 1;
   }
-  
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(
+      to bottom,
+      rgba(255, 255, 255, 0) 0%,
+      rgba(0, 0, 0, 0.8) 250%
+    );
+    z-index: 2;
+    border-radius: 10px;
+  }
+
+  h3 {
+    font-family: Montserrat;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 25.67px;
+    letter-spacing: 0%;
+
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    // text-shadow: 2px 2px grey;
+    bottom: 5%;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    margin: 0;
+    color: white;
+    z-index: 3;
+  }
+}
+
+.CardGallery {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 40px;
+  padding: 0 40px;
+}
+
+@media (max-width: 900px) {
   .CardGallery {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 40px;
-    padding: 0 40px;
+    grid-template-columns: 1fr 1fr;
   }
-  
+}
+
+@media (max-width: 720px) {
+  .CardGallery {
+    grid-template-columns: 1fr;
+  }
+}
