--- a/src/pages/Home/banner/banner.scss
+++ b/src/pages/Home/banner/banner.scss
@@ -1,6 +1,6 @@
-.banner {
+.bannerhome {
   position: relative;
-  height: 223px;
+  // height: 223px;
   margin: 50px 0;
   img {
     border-radius: 20px;
@@ -29,19 +29,19 @@
 }
 
 @media (max-width: 900px) {
-  .banner {
+  .bannerhome {
     p {
-      font-family: Montserrat;
-      font-weight: 700;
-      font-size: 24px;
-      line-height: 24px;
-      letter-spacing: 0%;
+      font-size: 36px;
     }
   }
 }
 
 @media (max-width: 720px) {
-  .banner {
+  .bannerhome {
+    margin-bottom: 20px;
+    img {
+      height: 111px;
+    }
     p {
       font-family: Montserrat;
       font-weight: 700;
