--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,6 @@
     font-size: 24px;
     align-items: center;
     a {
-      
       text-decoration: none;
       margin: 0 30px;
       font-family: "Montserrat", serif;
@@ -17,12 +16,43 @@
       font-size: 24px;
       line-height: 34.22px;
       letter-spacing: 0%;
-      color:black;
+      color: black;
       text-align: right;
-      
     }
-    a:hover{
-        text-decoration: underline;
+    a:hover {
+      text-decoration: underline;
+    }
+  }
+}
+
+@media (max-width: 720px) {
+  .header {
+    img {
+      width: 45%;
+    }
+    nav {
+      a {
+        font-family: Montserrat;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 143%;
+        letter-spacing: 0%;
+        text-align: right;
+        vertical-align: bottom;
+        margin: 0 10px;
+      }
+    }
+  }
+}
+@media (max-width: 450px) {
+  .header {
+    img {
+      width: 30%;
+    }
+    nav {
+      a {
+        font-size: 14px;
+      }
     }
   }
 }
