--- a/src/pages/Logements/underPicture/CollapseUnderPicture/CollapseUnderPicture.scss
+++ b/src/pages/Logements/underPicture/CollapseUnderPicture/CollapseUnderPicture.scss
@@ -39,8 +39,19 @@
 @media (max-width: 720px) {
   .collapseUnderPicture {
     flex-direction: column;
-    .CollapseElement{
+    .CollapseElement {
       width: 100%;
+      .elementDescription {
+        transition: max-height 0.5s ease-in-out; // Ajout de la transition
+        max-height: 0;
+        overflow: hidden;
+        &.open {
+          max-height: 600px;
+        }
+        &.closed {
+          max-height: 0px;
+        }
+      }
     }
   }
 }
