--- a/src/pages/About/about.scss
+++ b/src/pages/About/about.scss
@@ -44,3 +44,13 @@
     max-height: 0;
   }
 }
+
+@media (max-width: 720px) {
+  .dropMenu{
+    .CollapseElement{
+      .elementTitle{
+        width:95%;
+      }
+    }
+  }
+}
