--- a/src/pages/Logements/underPicture/underPicture.scss
+++ b/src/pages/Logements/underPicture/underPicture.scss
@@ -127,7 +127,9 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-
+      .locationRef p{
+        padding:0;
+      }
       p {
         padding: 0 20px;
       }
