--- a/src/pages/About/Collapse/collapse.scss
+++ b/src/pages/About/Collapse/collapse.scss
@@ -29,7 +29,7 @@
   padding: 0 25px;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.5s ease-out, padding 0.5s ease-out; // Ajout de la transition
+  transition: max-height 0.5s ease-out, padding 0.5s ease-out; // Ajout de la transition du collapse
   p {
     color: black;
   }
