--- a/src/pages/Home/gallery/gallery.scss
+++ b/src/pages/Home/gallery/gallery.scss
@@ -45,10 +45,10 @@
     z-index: 3;
   }
 }
-.loading{
+.loading {
   align-self: center;
   font-size: 48px;
-  color:black;
+  color: black;
 }
 .CardGallery {
   display: grid;
@@ -57,12 +57,17 @@
   padding: 0 40px;
 }
 
-
 @media (max-width: 720px) {
   .CardGallery {
+    justify-content: center;
     grid-template-columns: 1fr;
-    margin:0;padding:0;
-    gap:20px;
+    margin: 0;
+    padding: 0;
+    gap: 20px;
   }
 
+  .Card {
+    width: 90vw;
+    height: 70vw;
+  }
 }
