Fix du responsive, modification/ajout composant collapse réutilisable, fix erreurs consoles

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -60,7 +60,7 @@
 @media (max-width: 420px) {
   .header {
     gap: 50px;
-    align-self: center
+    align-self: center;
     img {
       width: 30%;
     }
