--- a/src/pages/About/Collapse/collapse.scss
+++ b/src/pages/About/Collapse/collapse.scss
@@ -34,3 +34,63 @@
     color: black;
   }
 }
+
+.CollapseElement {
+  .elementDescription {
+    width: 80%;
+    padding: 0 25px;
+
+    overflow: hidden;
+    transition: max-height 0.5s ease-out, padding 0.5s ease-out; // Ajout de la transition du collapse
+    p {
+      color: black;
+    }
+    transition: max-height 0.5s ease-in-out; // Ajout de la transition
+
+    overflow: hidden;
+  }
+  .open {
+    max-height: 600px;
+  }
+  .closed {
+    max-height: 0px;
+  }
+}
+
+@media (max-width: 720px) {
+  .dropMenu {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .CollapseElement {
+      align-items: center;
+      justify-content: center;
+      width: 90vw;
+      display: flex;
+      align-self: center;
+      flex-direction: column;
+      .elementTitle {
+        width: 90vw;
+        height: 30px;
+        padding: 10px;
+        h2 {
+          font-size: 13px;
+        }
+        img {
+          width: 30px;
+          height: 30px;
+        }
+      }
+      .elementDescription {
+        p {
+          font-family: Montserrat;
+          font-weight: 500;
+          font-size: 13px;
+          line-height: 143%;
+          letter-spacing: 0%;
+          vertical-align: bottom;
+        }
+      }
+    }
+  }
+}
