--- a/src/pages/Logements/underPicture/CollapseUnderPicture/CollapseUnderPicture.scss
+++ b/src/pages/Logements/underPicture/CollapseUnderPicture/CollapseUnderPicture.scss
@@ -47,9 +47,36 @@
 @media (max-width: 720px) {
   .collapseUnderPicture {
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     .CollapseElement {
-      width: 100%;
+      align-items: center;
+      justify-content: center;
+      width: 90vw;
+      display: flex;
+      align-self: center;
+      flex-direction: column;
+      .elementTitle {
+        width: 90vw;
+        height: 30px;
+        padding: 10px;
+        h2 {
+          font-size: 13px;
+        }
+        img {
+          width: 30px;
+          height: 30px;
+        }
+      }
       .elementDescription {
+        p {
+          font-family: Montserrat;
+          font-weight: 500;
+          font-size: 13px;
+          line-height: 143%;
+          letter-spacing: 0%;
+          vertical-align: bottom;
+        }
       }
     }
   }
